<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="movie"
            type="com.pavelkazancev02.indeedidtest.data.value_objects.Movie" />
        <variable
            name="saveClickListener"
            type="com.pavelkazancev02.indeedidtest.ui.top_movies.recycler_view.SaveClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_top_movies_ph" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/movie_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_poster"
            app:layout_constraintTop_toTopOf="@+id/movie_poster" />

        <TextView
            android:id="@+id/release_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/release_date"
            app:layout_constraintStart_toStartOf="@+id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat"
            android:text="1/01/2001"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/release_date_title"
            app:layout_constraintStart_toEndOf="@+id/release_date_title"
            app:layout_constraintTop_toTopOf="@+id/release_date_title" />

        <TextView
            android:id="@+id/popularity_score_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/popularity_score"
            app:layout_constraintStart_toStartOf="@+id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/release_date_title" />

        <TextView
            android:id="@+id/popularity_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat"
            android:text="167.1"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/popularity_score_title"
            app:layout_constraintStart_toEndOf="@+id/popularity_score_title"
            app:layout_constraintTop_toTopOf="@+id/popularity_score_title" />

        <ImageButton
            android:id="@+id/save_movie"
            style="@style/title_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_save"
            android:onClick="@{() -> saveClickListener.onSaveClick(movie)}"
            app:layout_constraintBottom_toBottomOf="@+id/popularity_score_title"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@+id/popularity_score_title" />

        <View
            android:id="@+id/divider"
            style="@style/divider_style"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popularity_score_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>